<resources>
    <string name="app_name">MedivatorB</string>
    <string name="welcome">Welcome to the Medivator platform! \n
        Meditation in the Word as a lifestyle, empowers you to prosper and have good success. \n \n
        Joshua 1:8.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="bsp">Bishop David Oyedepo</string>
    <string name="email">medivator@lfcww.org</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="testimony">Testimony</string>
    <string name="lfc_global">LFC Global</string>
    <string name="news_desk">News Desk</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="blank_new">Hello, world!</string>
    <string name="button">Play/Pause</string>
    <string name="quote">This Book of the Law shall not depart from your mouth, but you shall MEDITATE in it day and night, that you may \nOBSERVE TO DO &#8230;</string>
    <string name="word">The Word in season. The right Word. The sent Word.</string>
    <string name="new_dawn">It\'s Your New Dawn Era 2018.</string>

    <!--Contact Form-->
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>

    <!-- Location Guide -->
    <string name="title_activity_maps">LFC Global Locations</string>
    <string name="btn_mall">Mall</string>
    <string name="btn_sch">School</string>
    <string name="btn_chc">Church</string>
    <string name="btn_rest">Restaurant</string>
</resources>

