<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aud"
        android:title="@string/audio"
        android:icon="@drawable/ic_audiotrack_black_24dp" />
    <item
        android:id="@+id/vid"
        android:title="@string/video"
        android:icon="@drawable/ic_ondemand_video_black_24dp" />
    <item
        android:id="@+id/test"
        android:title="@string/testimony"
        android:icon="@drawable/ic_chat_black_24dp" />

    <item
        android:id="@+id/news"
        android:title="@string/news_desk"
        android:icon="@drawable/ic_content_paste_black_24dp" />
    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_contact_mail_black_24dp" />
    <item
        android:id="@+id/sett"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_power_settings_new_black_24dp" />

</menu>